--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,9 @@ nav ul{
     padding: 50px;
     grid-template-columns: 1fr 1fr 1fr 1fr; 
 }
+.top{
+    overflow: hidden;
+}
 ul li{
     
     text-align: center;
@@ -27,6 +30,7 @@ li>a{
     text-decoration: none;
     font-size: 30px;
     color: white;
+    font-weight: bold;
 }
 
 body{
@@ -41,6 +45,6 @@ article>h2{
 #grid{
 display: grid;
 align-content: center;
-grid-template-columns: 1fr;
+grid-template-rows: 1fr;
 }
 
