--- a/styles.css
+++ b/styles.css
@@ -79,5 +79,28 @@ input{
     #grid{
         grid-template-columns: 1fr 1fr;
     }
+    .Contact{
+        display: grid;
+        background-color: black;
+        color: white;
+        justify-content: center;
+    }
+    
+    form>input{
+        display:grid;
+        grid-template-rows: 1fr 1fr;
+        
+    }
+    footer{
+        justify-content: center;
+        color: white;
+        background-color: black;
+    }
+    input{
+        justify-content: center;
+        color: #007d7b;
+        font-weight: bold;
+    }
+    
 }
 
