--- a/styles.css
+++ b/styles.css
@@ -46,10 +46,14 @@ body {
     width:485px;
     margin: 0 auto;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: white;
+    
 }
 
 
-
+html{
+    background-color: black;
+}
 
 header>h1{
 text-align:center;
@@ -84,9 +88,6 @@ li>a{
    
 }
 
-body{
-    background-color: white;
-}
 article{
     text-align: center;
 }
@@ -128,6 +129,9 @@ input{
     #grid{
         grid-template-columns: 1fr 1fr ;
     }
+    body{
+        width: 888px;
+    }
     .Contact{
         display: grid;
         background-color: black;
@@ -155,11 +159,11 @@ input{
 @media screen and (min-width: 1300px){
     #grid{
         grid-template-columns: 1fr 1fr 1fr ;
-        column-gap: 0;
-        row-gap: 0;
-        column-gap: -25px -25px -25px;
+    }
+    body{
+            width: 888px;
+        }
     }
 
-}
 
 
