--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,8 @@ html{
 header>h1{
 text-align:center;
 text-transform: capitalize;
-font-size: 60px;
+font-weight: bold;
+font-size: 40px;
 color: #007d7b
 
 }
