--- a/styles.css
+++ b/styles.css
@@ -118,6 +118,8 @@ footer{
     justify-content: center;
     color: white;
     background-color: black;
+    padding:15px;
+    text-align: center;
 }
 input{
     justify-content: center;
